# ntfs_research_tool

./: CMakeLists.txt  Makefile  README.md  ntfsrd.cpp
cmake_find/: boilerplate.cmake
itsutils/src/: ntfsrd.cpp
